# CLAHE-optimization

./: CMakeLists.txt  README.md  cuda_clahe.cu  cuda_clahe.h  image.cpp  image.h  test.cpp
csv_for_readme/: Clahe Data - ADA 2000 vs RTX4090.csv  Clahe Data - ADA 2000 vs RTX4090.csv:Zone.Identifier  Clahe Data - Nano vs AGX.csv  Clahe Data - Nano vs AGX.csv:Zone.Identifier
